# nyxBrowser

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md
cmake/: README.md
config/: settings.default.toml
docs/: ARCHITECTURE.md
src/: main.cc  message_bridge.cc  message_bridge.h  nyx_app.cc  nyx_app.h  nyx_client.cc  nyx_client.h  nyx_window.cc  nyx_window.h  paths.cc  paths.h  resource.h  scheme_handler.cc  scheme_handler.h  storage.cc  storage.h  tab_manager.cc  tab_manager.h
src/intel/: base64url.cc  base64url.h  feed_service.cc  feed_service.h  intel_service.cc  intel_service.h  ioc_extractor.cc  ioc_extractor.h  sha256.cc  sha256.h  virustotal.cc  virustotal.h
src/win/: nyx.exe.manifest  nyx.rc
tools/: build.ps1  fetch_cef.ps1  fetch_deps.ps1  package.ps1
ui/: index.html
ui/css/: theme.css
ui/js/: app.js  bridge.js
